20073
```scala
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_74).
Type in expressions for evaluation. Or try :help.

scala> :pa
// Entering paste mode (ctrl-D to finish)

case class Foo(val value: String)
object Foo {
  implicit def unlift(x: Foo): String = x.value
}
val s: String = Foo("abc")

// Exiting paste mode, now interpreting.

defined class Foo
defined object Foo
s: String = abc

scala> :res
Resetting interpreter state.
Forgetting all expression results and named terms: $intp, Foo, s
Forgetting defined types: Foo

scala> :pa
// Entering paste mode (ctrl-D to finish)

case class Wrapper(value: String)

type Foo = Wrapper
object Foo {
  def apply(s: String): Foo = Wrapper(s)
  implicit def unlift(x: Foo): String = x.value
}

val s: String = Foo("abc")

// Exiting paste mode, now interpreting.

<console>:19: error: type mismatch;
 found   : Foo
    (which expands to)  Wrapper
 required: String
       val s: String = Foo("abc")
                          ^
```

For reference (from @retronym on scala/contributors): Only a class and object form a companion relationship.
